res/tests/bad/undeclared_function_call.abc

main :: () {
  nilo_the_magic_dragon();
}
